--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -42,10 +42,8 @@
   >
     <div class="flex justify-center mx-2 md:mx-6">
       <div class="w-[60rem] max-w-full my-6 px-4 py-6 border border-white">
-        {% include "header.html" %}
-        {% block content %}
-        {% include "layouts/content.html" %}
-        {% endblock %}
+        {% include "header.html" %} {% block content %} {% include
+        "layouts/content.html" %} {% endblock %}
       </div>
     </div>
   </body>
